try different path

--- a/circle.yml
+++ b/circle.yml
@@ -47,9 +47,9 @@ workflows:
             # save test results file in the workspace
             - run: cat test-results.json
             - persist_to_workspace:
-                root: /
+                root: ~/
                 paths:
-                  - root/project/test-results.json
+                  - project/test-results.json
 
       - tests-passed:
           requires:
